<resources>

    <string name="app_name">一诺电子鼻</string>
    <!-- 关于  开始 -->
    <string name="abouttitle">关于</string>
    <string name="about"></string>
    <string name="version"></string>
    <string name="aboutweb"></string>
    <string name="contactsus"></string>
    <string name="moreapp"></string>
    <!-- 关于  结束 -->
    <!-- 帮助  开始 -->
    <string name="commonProblem">常见问题</string>
    <string name="onlineManual">在线说明书</string>
    <string name="onlineVideo">在线视频</string>
    <!-- 帮助  结束 -->
    <!-- 配置中心 开始 -->


    <!-- 更新提示 开始 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- 个性化提示 结束 -->


    <!-- 異常 -->
    <string name="network_not_connected">处理过程发生错误，可能尚未开启网络!</string>
    <string name="network_not_connected_view_local">网络连接失败,为您显示本地缓存数据，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="app_menu_cancellation">确定注销程序吗？</string>
    <string name="tip_ok">确定</string>
    <string name="tip_cancel">取消</string>
    <string name="tip_input">提示</string>
    <string name="tip_quit">退出</string>
    <string name="tip_task_finish">提交成功，任务完成！</string>
    <string name="tip_notloginnull">用户名或密码不能为空</string>
    <string name="tip_loginfail">登录失败，请输入正确用户名密码</string>
    <string name="tip_loginerror">登录失败，请重新登录</string>
    <string name="tip_isquit">是否退出</string>
    <string name="tip_loaderror">加载失败，请重新加载</string>
    <string name="tip_connectfail">处理过程发生错误，可能尚未开启网络!</string>
    <string name="tip_checkresult0">请选择检查结果</string>
    <string name="tip_corrective0">请选择整改措施</string>
    <string name="text_num_limit_left">还可输入%d个字</string>

    <!-- 主页面 开始 -->
    <string name="ui_home_sensor">传感器</string>
    <string name="ui_home_islinked">未连接</string>
    <string name="ui_home_current">实时数据</string>
    <string name="ui_home_current_value">当前值</string>
    <string name="ui_home_current_value_default"></string>
    <string name="ui_home_current_data_high">最高值</string>
    <string name="ui_home_current_data_high_default"></string>
    <string name="ui_home_current_avg">平均值</string>
    <string name="ui_home_current_avg_default"></string>
    <string name="ui_home_current_currentMeans">请保持心情愉悦，多看猫咪，喵喵最可爱</string>
    <string name="ui_home_history">历史数据</string>
    <string name="ui_home_match">来局比赛</string>
    <string name="ui_home_share">朋友分享</string>
    <string name="ui_home_usage">累计使用时间</string>
    <string name="ui_home_current_unit_default">ppm</string>
    <string name="ui_home_high">最高值</string>
    <string name="ui_home_ranking">当前值击败全国</string>
    <string name="ui_home_ranking_user">用户</string>
    <string name="ui_home_sensor_link_content">请将传感器插入耳机孔，并打开传感器开关</string>
    <string name="ui_home_match_instruction">记下自己的颜色，点击色块进行排名</string>
    <!-- 主页面 结束 -->
    <!-- 分享页面 开始 -->
    <string name="share_current">分享实时数据</string>
    <string name="share_history">分享历史数据</string>
    <string name="share_match">分享比赛</string>
    <string name="share_2">将信息分享到</string>
    <!-- 分享页面 结束 -->

    <string name="submit">确认</string>
     <string name="cancel">取消</string>
    <string name="ui_setting_alcohol_title">请选择酒精的单位</string>
	
</resources>