<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeSensorLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="0.618"
    android:background="@color/ui_home_current_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/ui_home_usage"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/homeUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/homePowerLevel"
            android:layout_width="28dip"
            android:layout_height="20dip"
            android:layout_gravity="right|center_vertical"
            android:gravity="right"
            android:paddingRight="10dip"
            android:src="@drawable/ui_home_power_4" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/homeSensorLinkContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_home_sensor_link_content"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_home_current_value"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/homeDataContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="50dip" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/homeDataUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/homeDataStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/homeDataContentMeans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_home_high"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/homeDataContentHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/homeDataContentHighUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_home_ranking"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/homeDataContentHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ui_home_ranking_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_home_ranking_user"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/homeSensorStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="当前状态，由按钮体现"
            android:textColor="@color/black"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/homeRunOrStop"
        android:layout_width="85dip"
        android:layout_height="85dip"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:clickable="true"
        android:src="@drawable/ui_home_stop"
        android:visibility="gone" />

</LinearLayout>