<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uiHomeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ui_home_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="15dip" >

        <Button
            android:id="@+id/title_bar_left_menu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/titlebar_menu_selector_left" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/homeEquipName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="7dp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/homeVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="7dp"
                android:text="@string/ui_home_sensor"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/homeIsLinked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="7dp"
                android:text="@string/ui_home_islinked"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/title_bar_right_menu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/titlebar_menu_selector_right" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/homePager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.4" >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/homeCurrent"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ui_home_current_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_home_current"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/homeHistory"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ui_home_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_home_history"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/homeMatch"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ui_home_match" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_home_match"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/homeShare"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:src="@drawable/ui_home_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_home_share"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>