<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hw.weidou"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ui_home_share_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/ui_home_current_value"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/shareCurDataContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dip"
            android:text="@string/ui_home_current_value_default"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/shareDataUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <me.xiaopan.android.switchbutton.SwitchButton
            android:id="@+id/share_current"
            style="@style/switch_button_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/share_current"
            app:frameDrawable="@drawable/switch_frame"
            app:sliderDrawable="@drawable/selector_switch_slider"
            app:stateDrawable="@drawable/selector_switch_state"
            app:stateMaskDrawable="@drawable/switch_state_mask"
            app:withTextInterval="16dp" />

        <me.xiaopan.android.switchbutton.SwitchButton
            android:id="@+id/share_history"
            style="@style/switch_button_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/share_history"
            app:frameDrawable="@drawable/switch_frame"
            app:sliderDrawable="@drawable/selector_switch_slider"
            app:stateDrawable="@drawable/selector_switch_state"
            app:stateMaskDrawable="@drawable/switch_state_mask"
            app:withTextInterval="16dp" />

        <me.xiaopan.android.switchbutton.SwitchButton
            android:id="@+id/share_match"
            style="@style/switch_button_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/share_match"
            android:visibility="gone"
            app:frameDrawable="@drawable/switch_frame"
            app:sliderDrawable="@drawable/selector_switch_slider"
            app:stateDrawable="@drawable/selector_switch_state"
            app:stateMaskDrawable="@drawable/switch_state_mask"
            app:withTextInterval="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/share_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/black"
            android:paddingBottom="20dip"
            android:paddingTop="10dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/shareQQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/logo_qq" />

            <ImageView
                android:id="@+id/shareQZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/logo_qzone" />

         <ImageView
                android:id="@+id/shareTencentWeibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/logo_tencentweibo" /> 
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/shareWechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/logo_wechat" />

            <ImageView
                android:id="@+id/shareFriendCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/logo_wechatmoments" />

         <ImageView
                android:id="@+id/shareSinaWeibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:visibility="gone"
                android:src="@drawable/logo_sinaweibo" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>